--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Lautaro Suarez.</span> Tengo 20 años, soy un estudiante de la UTN, actualmente me encuentro estudiando analista de sistemas y me gustaria ser programador front end. Me apasiona mucho la programación web y cada vez estoy aprendiendo mas para nutrirme de mas conocimiento. Mi deseo es conseguir un trabajo relacionado con la web para poder integrarme a este mundo de la programacion y para tambien ganar experiencia en el rubro. Cuento con conocimientos de scss, css, html, aplicar animations, git, github, bootstrap, y estoy aprendiendo a aplicar javascript.</p>
+            <p><span>Hola, soy Lautaro Suarez.</span> Tengo 20 años, soy un estudiante de la UTN, actualmente me encuentro estudiando analista de sistemas y me gustaria ser programador front end. Me apasiona mucho la programación web y cada vez estoy aprendiendo mas para nutrirme de todo el conocimiento que pueda. Mi deseo es conseguir un trabajo relacionado con la web para poder integrarme a este mundo de la programacion y para tambien ganar experiencia en el rubro. Cuento con conocimientos de scss, css, html, aplicar animations, git, github, bootstrap, y estoy aprendiendo a aplicar javascript.</p>
 
             <div class="fila">
                 <!-- datos personales -->
