--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     </div>
                     <div class="item der">
                         <h4>OFICINISTA.</h4>
-                        <span class="casa">WETCOM SA.</span>
+                        <span class="casa">SATMAT</span>
                         <span class="fecha">FEBRERO 2021 - OCTUBRE 2021.</span>
                         <p>Asistencia virtual al personal de la compañia y socios de la misma, asistencia presencial a personal de compañias extranjeras mayormente europeas.</p>
                         <div class="conectord">
