--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Lautaro Suarez.</span> Tengo 20 años, soy un estudiante de la UTN, actualmente me encuentro estudiando analista de sistemas y me gustaria ser programador front end. Me apasiona mucho la programación web y cada vez estoy aprendiendo mas para nutrirme de todo el conocimiento que pueda. Mi deseo es conseguir un trabajo relacionado con la web para poder integrarme a este mundo de la programacion y para tambien ganar experiencia en el rubro. Cuento con conocimientos de scss, css, html, aplicar animations, git, github, bootstrap, y estoy aprendiendo a aplicar javascript.</p>
+            <p><span>Hola, soy Lautaro Suarez.</span> Tengo 20 años, soy un estudiante de la facultad Da Vinci, actualmente me encuentro estudiando analista de sistemas y trabajo como desarrollador web. Me apasiona mucho la programación web y cada vez estoy aprendiendo mas para nutrirme de todo el conocimiento que pueda. Mi deseo es seguir trabajando con todo lo relacionado con la programacion web para poder integrarme cada vez mas a este mundo de la programacion. Cuento con conocimientos de scss, css, html, animations, git, github, bootstrap, tailwind, javascript, react. Pero con lo que mas comodo me siento para trabajar es javascript html y css.</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -81,7 +81,7 @@
                         </li>
                         <li>
                             <strong>Cargo</strong>
-                            <span>EN BUSCA DE TRABAJO.</span>
+                            <span>Desarrolador Web.</span>
                         </li>
                     </ul>
                 </div>
@@ -137,7 +137,7 @@
                         <span>Javascript</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span>99%</span>
                             </div>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                         <span>HTML & CSS</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>95%</span>
+                                <span>99%</span>
                             </div>
                         </div>
                     </div>
@@ -153,23 +153,23 @@
                         <span>Photoshop</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>50%</span>
+                                <span>99%</span>
                             </div>
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Wordpress</span>
+                        <span>Php</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>50%</span>
+                                <span>75%</span>
                             </div>
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Drupa</span>
+                        <span>React</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>15%</span>
+                                <span>95%</span>
                             </div>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                         <span>Comunicación</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>80%</span>
+                                <span>90%</span>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                         <span>Proyect Management</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>25%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -248,10 +248,10 @@
                         </div>
                     </div>
                     <div class="item izq">
-                        <h4>Universidad Tecnológica Nacional, UTN.</h4>
+                        <h4>Universidad Da Vinci.</h4>
                         <span class="casa">Analista de sistemas.</span>
                         <span class="fecha">2023 - presente.</span>
-                        <p>Estudiante de Analista de sistemas y desarrollo front end.</p>
+                        <p>Estudiante de Analista de sistemas.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -262,18 +262,18 @@
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
                         <h4>COMMUNITY MANAGER.</h4>
-                        <span class="casa">Exoscout.</span>
+                        <span class="casa">TeleRed Imagen SA</span>
                         <span class="fecha">2021-2022.</span>
-                        <p>Diseño y desarrollo de campañas de marketing online y en redes sociales para clientes. Manejo y supervisión de las cuentas en redes sociales y atencion al usuario</p>
+                        <p>Diseño y desarrollo de campañas de marketing online y en redes sociales para clientes. Diseño de fotos, posteos y ideas de texto en cada publicacion en cada red social.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>OFICINISTA.</h4>
-                        <span class="casa">SATMAT</span>
-                        <span class="fecha">FEBRERO 2021 - OCTUBRE 2021.</span>
-                        <p>Asistencia virtual al personal de la compañia y socios de la misma, asistencia presencial a personal de compañias extranjeras mayormente europeas.</p>
+                        <h4>Desarrollador Freelance</h4>
+                        <span class="casa">freelance</span>
+                        <span class="fecha">2021 - presente</span>
+                        <p>Desarrollo de paginas web usando lenguajes de javascript y react js. La mayoria de las paginas estan hechas, con javascript, html, css.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
@@ -294,40 +294,14 @@
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/in progress.png" alt="Estamos trabajando en este proyecto, aún no está listo." height="300px" width="200px">
-                    <div class="overlay">
-                        <h3>Este proyecto aún no esta listo.</h3>
-                        <p></p>
-                    </div>
+                    <a href="https://lautarosuarezz.github.io/portfolio121/"><img src="img/mi portfolio example.png" alt="Ejemplo de portfolio web." height="300px" width="200px"></a>
                 </div>
                 <div class="proyecto">
-                    <img src="img/in progress.png" alt="Estamos trabajando en este proyecto, aún no está listo." height="300px" width="200px">
-                    <div class="overlay">
-                        <h3>Este proyecto aún no esta listo.</h3>
-                        <p></p>
-                    </div>
+                    <a href="https://lautarosuarezz.github.io/eccomerce1212/"><img src="img/trabajo eccomerce .png" alt="proyecto de eccomerce" height="300px" width="200px"></a>
                 </div>
                 <div class="proyecto">
-                    <img src="img/in progress.png" alt="Estamos trabajando en este proyecto, aún no está listo." height="300px" width="200px">
-                    <div class="overlay">
-                        <h3>Este proyecto aún no esta listo.</h3>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img src="img/in progress.png" alt="Estamos trabajando en este proyecto, aún no está listo." height="300px" width="200px">
-                    <div class="overlay">
-                        <h3>Este proyecto aún no esta listo.</h3>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img src="img/in progress.png" alt="Estamos trabajando en este proyecto, aún no está listo." height="300px" width="200px">
-                    <div class="overlay">
-                        <h3>Este proyecto aún no esta listo.</h3>
-                        <p></p>
-                    </div>
-                </div>
+                    <a href="https://lautarosuarezz.github.io/calculadora11/"><img src="img/calculadora traajo.png" alt="calculadora proyecto" height="300px" width="200px"></a>                    
+                </div>           
             </div>
         </div>
     </section>
