--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         <h4>COMMUNITY MANAGER.</h4>
                         <span class="casa">TeleRed Imagen SA</span>
                         <span class="fecha">2021-2022.</span>
-                        <p>Diseño y desarrollo de campañas de marketing online y en redes sociales para clientes. Diseño de fotos, posteos y ideas de texto en cada publicacion en cada red social.</p>
+                        <p>Diseño y desarrollo de campañas de marketing online y en redes sociales para la empresa. Diseño de fotos, posteos y ideas de texto en cada publicacion en cada red social.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
